syntax = "proto3";

package auth;

import "access-token.proto";
import "authorization-code.proto";
import "client.proto";
import "id-token.proto";
import "refresh-token.proto";
import "scope.proto";
import "user.proto";

service Account{
  rpc CreateUser(user.User) returns (user.User) {}
  rpc GetUser(user.User) returns (user.User) {}
  rpc ListUsers(user.User) returns (user.UserList) {}
  rpc UpdateUser(user.User) returns (user.User) {}
  rpc DeleteUser(user.User) returns (user.User) {}
  rpc AuthenticateUser(user.User) returns (user.User) {}

  rpc CreateClient(client.Client) returns (client.Client) {}
  rpc GetClient(client.Client) returns (client.Client) {}
  rpc ListClients(client.Client) returns (client.ClientList) {}
  rpc UpdateClient(client.Client) returns (client.Client) {}
  rpc UpdateClientSecret(client.Client) returns (client.Client) {}
  rpc DeleteClient(client.Client) returns (client.Client) {}
  rpc AuthenticateClient(client.Client) returns (client.Client) {}

  rpc CreateAccessToken(access_token.AccessToken) returns (access_token.AccessToken) {}
  rpc GetAccessToken(access_token.AccessToken) returns (access_token.AccessToken) {}
  rpc ListAccessTokens(access_token.AccessToken) returns (access_token.AccessTokenList) {}
  rpc UpdateAccessToken(access_token.AccessToken) returns (access_token.AccessToken) {}
  rpc DeleteAccessToken(access_token.AccessToken) returns (access_token.AccessToken) {}

  rpc CreateAuthorizationCode(authorization_code.AuthorizationCode) returns (authorization_code.AuthorizationCode) {}
  rpc GetAuthorizationCode(authorization_code.AuthorizationCode) returns (authorization_code.AuthorizationCode) {}
  rpc ListAuthorizationCodes(authorization_code.AuthorizationCode) returns (authorization_code.AuthorizationCodeList) {}
  rpc UpdateAuthorizationCode(authorization_code.AuthorizationCode) returns (authorization_code.AuthorizationCode) {}
  rpc DeleteAuthorizationCode(authorization_code.AuthorizationCode) returns (authorization_code.AuthorizationCode) {}

  rpc CreateRefreshToken(refresh_token.RefreshToken) returns (refresh_token.RefreshToken) {}
  rpc GetRefreshToken(refresh_token.RefreshToken) returns (refresh_token.RefreshToken) {}
  rpc ListRefreshTokens(refresh_token.RefreshToken) returns (refresh_token.RefreshTokenList) {}
  rpc UpdateRefreshToken(refresh_token.RefreshToken) returns (refresh_token.RefreshToken) {}
  rpc DeleteRefreshToken(refresh_token.RefreshToken) returns (refresh_token.RefreshToken) {}

  rpc GetScope(scope.Scope) returns (scope.Scope) {}
  rpc ListScopes(scope.Scope) returns (scope.ScopeList) {}

  rpc CreateAIdToken(id_token.IdTokenRequest) returns (id_token.IdTokenResponse) {}
}


